# seymour

./: Cargo.toml  README.md
migrations/: 20210107030811_feeds.sql  20210107030853_feed_entries.sql  20210107030905_users.sql  20210107030912_views.sql  20210110190931_subscriptions.sql
scripts/: test.sql  test_setup.sh
src/: gemini.rs  main.rs  protocol.rs
src/gemini/: feed.rs  fetch.rs  mod.rs
