[package]
name = "seymour"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
chrono = "*"
dotenv = "*"
env_logger = "*"
futures = "*"
itertools = "*"
lazy_static = "*"
log = "*"
regex = "*"
rustls = {version = "0.18", features = ["dangerous_configuration"]}
sqlx = { version = "*", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "offline", "sqlite"] }
thiserror = "*"
tokio = "0.2"
tokio-rustls="0.14"
url = "*"
webpki = "0.21"
webpki-roots = "0.21"
