[package]
name = "seymour"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
dotenv = "*"
env_logger = "*"
futures = "*"
log = "*"
sqlx = { version = "*", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "offline", "sqlite"] }
tokio = "0.2"
seymour-protocol = { path = "/home/jsvana/projects/seymour-protocol", version = "*" }
gemini-fetch = { path = "/home/jsvana/projects/gemini-fetch", version = "*" }
gemini-feed = { path = "/home/jsvana/projects/gemini-feed", version = "*" }
